Fix threads feature misalignment

--- a/theme/fixes.css
+++ b/theme/fixes.css
@@ -239,3 +239,11 @@
 #app-mount .navButtonActive-1EqC5l {
     background-color: #272727
 }
+
+#app-mount .container-1Bj0eq{
+    margin-left:14px
+}
+
+.container-1Bj0eq .mainContent-20q_Hp{
+    margin-left:4px
+}
